             • new argument ‘MARGIN’ added to allow the application of
               the methods along the wavelength or the time,

             • set default method to ‘smooth’.

         • ‘calc_FadingCorr()’

             • Table column headers now have all capital letters,

             • minor performance improvements,

             • for very large standard errors uniroot failed, causing a
               function break; corrected (#270).

         • ‘calc_OSLLxTxRatio()’

             • New argument ‘digits’ introduced to allow direct
               rounding of the numbers,

             • add argument ‘sig0’ to allow for an extra component of
               error.

         • ‘fit_LMCurve()’

             • Fix bug that caused a function break if data set
               contained 0 time values but a log-scale was wanted; now
               the ‘xlim’ is adjusted and a warning is given.

         • ‘merge_RLum.Data.Curve()’

             • Support further merge operations: ‘median’, ‘var’, ‘sd’,
               ‘min’, ‘max’.

         • ‘plot_AbanicoPlot()’

             • Fixed a bug where the function failed to get input data
               from ‘RLum.Results’ objects.

             • New argument ‘interactive’ to produce an interactive
               plot using the JavaScript graphing library 'plotly.js'
               (requires the 'plotly' package).

         • ‘plot_DRTResults()’

             • If no given dose is provided the horizontal 'ab-lines'
               (1.0 and +/- 0.1) are no longer plotted,

             • default value for the argument ‘given.dose’ is now
               ‘NULL’.

         • ‘plot_GrowthCurve()’

             • If the input data contain a least one infinite value the
               function will not crash any longer, but return ‘NULL’
               (#263, Norbert Mercier),

             • check for insufficient values in the data set and return
               ‘NULL’ (before the function crashed),
